@@ -312,6 +312,27 @@
 #
 ##########################################################################################################
 #
+## IPMI_Power_Unit_State
+#
+# IPMI_Power_Unit_State_Deasserted     Nominal
+# IPMI_Power_Unit_State_Asserted       Warning
+#
+##########################################################################################################
+#
+## IPMI_Power_Unit_Transition_Severity
+#
+# IPMI_Power_Unit_Transition_Severity_Transition_To_OK                                 Nominal
+# IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Critical_From_OK               Warning
+# IPMI_Power_Unit_Transition_Severity_Transition_To_Critical_From_Less_Severe          Critical
+# IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe   Critical
+# IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Critical_From_More_Severe      Warning
+# IPMI_Power_Unit_Transition_Severity_Transition_To_Critical_From_Non_Recoverable      Critical
+# IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Recoverable                    Critical
+# IPMI_Power_Unit_Transition_Severity_Monitor                                          Warning
+# IPMI_Power_Unit_Transition_Severity_Informational                                    Nominal
+#
+##########################################################################################################
+#
 ## IPMI_Power_Unit_Device_Present
 #
 # IPMI_Power_Unit_Device_Present_Device_Removed_Device_Absent   Critical
