@@ -335,6 +335,27 @@ static struct ipmi_interpret_sel_config ipmi_interpret_sel_power_unit_config[] =
   };
 static unsigned int ipmi_interpret_sel_power_unit_config_len = 8;
 
+static struct ipmi_interpret_sel_config ipmi_interpret_sel_power_unit_state_config[] =
+  {
+    { "IPMI_Power_Unit_State_Deasserted", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_Power_Unit_State_Asserted", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+  };
+static unsigned int ipmi_interpret_sel_power_unit_state_config_len = 2;
+
+static struct ipmi_interpret_sel_config ipmi_interpret_sel_power_unit_transition_severity_config[] =
+  {
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_OK", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Critical_From_OK", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Critical_From_Less_Severe", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Critical_From_More_Severe", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Critical_From_Non_Recoverable", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Recoverable", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Power_Unit_Transition_Severity_Monitor", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Power_Unit_Transition_Severity_Informational", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
+  };
+static unsigned int ipmi_interpret_sel_power_unit_transition_severity_config_len = 9;
+
 static struct ipmi_interpret_sel_config ipmi_interpret_sel_power_unit_device_present_config[] =
   {
     { "IPMI_Power_Unit_Device_Present_Device_Removed_Device_Absent", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
@@ -1800,6 +1821,18 @@ interpret_sel_init (ipmi_interpret_ctx_t ctx)
     goto cleanup;
 
   if (_interpret_config_sel_init (ctx,
+                                  &ctx->interpret_sel.ipmi_interpret_sel_power_unit_state_config,
+                                  ipmi_interpret_sel_power_unit_state_config,
+                                  ipmi_interpret_sel_power_unit_state_config_len) < 0)
+    goto cleanup;
+
+  if (_interpret_config_sel_init (ctx,
+                                  &ctx->interpret_sel.ipmi_interpret_sel_power_unit_transition_severity_config,
+                                  ipmi_interpret_sel_power_unit_transition_severity_config,
+                                  ipmi_interpret_sel_power_unit_transition_severity_config_len) < 0)
+    goto cleanup;
+
+  if (_interpret_config_sel_init (ctx,
                                   &ctx->interpret_sel.ipmi_interpret_sel_power_unit_device_present_config,
                                   ipmi_interpret_sel_power_unit_device_present_config,
                                   ipmi_interpret_sel_power_unit_device_present_config_len) < 0)
@@ -2225,6 +2258,12 @@ interpret_sel_destroy (ipmi_interpret_ctx_t ctx)
 
   _interpret_config_sel_destroy (ctx,
                                  ctx->interpret_sel.ipmi_interpret_sel_power_unit_config);
+
+  _interpret_config_sel_destroy (ctx,
+                                 ctx->interpret_sel.ipmi_interpret_sel_power_unit_state_config);
+
+  _interpret_config_sel_destroy (ctx,
+                                 ctx->interpret_sel.ipmi_interpret_sel_power_unit_transition_severity_config);
 
   _interpret_config_sel_destroy (ctx,
                                  ctx->interpret_sel.ipmi_interpret_sel_power_unit_device_present_config);
@@ -2895,6 +2934,8 @@ interpret_sel_config_parse (ipmi_interpret_ctx_t ctx,
   int ipmi_interpret_sel_power_supply_transition_severity_flags[ipmi_interpret_sel_power_supply_transition_severity_config_len];
   int ipmi_interpret_sel_power_supply_redundancy_flags[ipmi_interpret_sel_power_supply_redundancy_config_len];
   int ipmi_interpret_sel_power_unit_flags[ipmi_interpret_sel_power_unit_config_len];
+  int ipmi_interpret_sel_power_unit_state_flags[ipmi_interpret_sel_power_unit_state_config_len];
+  int ipmi_interpret_sel_power_unit_transition_severity_flags[ipmi_interpret_sel_power_unit_transition_severity_config_len];
   int ipmi_interpret_sel_power_unit_device_present_flags[ipmi_interpret_sel_power_unit_device_present_config_len];
   int ipmi_interpret_sel_power_unit_redundancy_flags[ipmi_interpret_sel_power_unit_redundancy_config_len];
   int ipmi_interpret_sel_cooling_device_redundancy_flags[ipmi_interpret_sel_cooling_device_redundancy_config_len];
@@ -3100,6 +3141,18 @@ interpret_sel_config_parse (ipmi_interpret_ctx_t ctx,
                             ctx->interpret_sel.ipmi_interpret_sel_power_unit_config,
                             ipmi_interpret_sel_power_unit_flags,
                             ipmi_interpret_sel_power_unit_config_len);
+
+  _fill_sel_config_options (config_file_options,
+                            &config_file_options_len,
+                            ctx->interpret_sel.ipmi_interpret_sel_power_unit_state_config,
+                            ipmi_interpret_sel_power_unit_state_flags,
+                            ipmi_interpret_sel_power_unit_state_config_len);
+
+  _fill_sel_config_options (config_file_options,
+                            &config_file_options_len,
+                            ctx->interpret_sel.ipmi_interpret_sel_power_unit_transition_severity_config,
+                            ipmi_interpret_sel_power_unit_transition_severity_flags,
+                            ipmi_interpret_sel_power_unit_transition_severity_config_len);
 
   _fill_sel_config_options (config_file_options,
                             &config_file_options_len,
