@@ -352,6 +352,29 @@ static struct ipmi_interpret_sensor_config ipmi_interpret_sensor_power_unit_conf
   };
 static unsigned int ipmi_interpret_sensor_power_unit_config_len = 9;
 
+static struct ipmi_interpret_sensor_config ipmi_interpret_sensor_power_unit_state_config[] =
+  {
+    { "IPMI_Power_Unit_State_No_Event", IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_Power_Unit_State_Deasserted", IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_Power_Unit_State_Asserted", IPMI_INTERPRET_STATE_WARNING},
+  };
+static unsigned int ipmi_interpret_sensor_power_unit_state_config_len = 3;
+
+static struct ipmi_interpret_sensor_config ipmi_interpret_sensor_power_unit_transition_severity_config[] =
+  {
+    { "IPMI_Power_Unit_Transition_Severity_No_Event", IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_OK", IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Critical_From_OK", IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Critical_From_Less_Severe", IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe", IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Critical_From_More_Severe", IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Critical_From_Non_Recoverable", IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Power_Unit_Transition_Severity_Transition_To_Non_Recoverable", IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Power_Unit_Transition_Severity_Monitor", IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Power_Unit_Transition_Severity_Informational", IPMI_INTERPRET_STATE_NOMINAL},
+  };
+static unsigned int ipmi_interpret_sensor_power_unit_transition_severity_config_len = 10;
+
 static struct ipmi_interpret_sensor_config ipmi_interpret_sensor_power_unit_device_present_config[] =
   {
     { "IPMI_Power_Unit_Device_Present_No_Event", IPMI_INTERPRET_STATE_NOMINAL},
@@ -1702,6 +1725,18 @@ interpret_sensor_init (ipmi_interpret_ctx_t ctx)
     goto cleanup;
 
   if (_interpret_config_sensor_init (ctx,
+                                     &ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_state_config,
+                                     ipmi_interpret_sensor_power_unit_state_config,
+                                     ipmi_interpret_sensor_power_unit_state_config_len) < 0)
+    goto cleanup;
+
+  if (_interpret_config_sensor_init (ctx,
+                                     &ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_transition_severity_config,
+                                     ipmi_interpret_sensor_power_unit_transition_severity_config,
+                                     ipmi_interpret_sensor_power_unit_transition_severity_config_len) < 0)
+    goto cleanup;
+
+  if (_interpret_config_sensor_init (ctx,
                                      &ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_device_present_config,
                                      ipmi_interpret_sensor_power_unit_device_present_config,
                                      ipmi_interpret_sensor_power_unit_device_present_config_len) < 0)
@@ -2089,6 +2124,12 @@ interpret_sensor_destroy (ipmi_interpret_ctx_t ctx)
 
   _interpret_config_sensor_destroy (ctx,
                                     ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_config);
+
+  _interpret_config_sensor_destroy (ctx,
+                                    ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_state_config);
+
+  _interpret_config_sensor_destroy (ctx,
+                                    ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_transition_severity_config);
 
   _interpret_config_sensor_destroy (ctx,
                                     ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_device_present_config);
@@ -2488,6 +2529,8 @@ interpret_sensor_config_parse (ipmi_interpret_ctx_t ctx,
   int ipmi_interpret_sensor_power_supply_transition_severity_flags[ipmi_interpret_sensor_power_supply_transition_severity_config_len];
   int ipmi_interpret_sensor_power_supply_redundancy_flags[ipmi_interpret_sensor_power_supply_redundancy_config_len];
   int ipmi_interpret_sensor_power_unit_flags[ipmi_interpret_sensor_power_unit_config_len];
+  int ipmi_interpret_sensor_power_unit_state_flags[ipmi_interpret_sensor_power_unit_state_config_len];
+  int ipmi_interpret_sensor_power_unit_transition_severity_flags[ipmi_interpret_sensor_power_unit_transition_severity_config_len];
   int ipmi_interpret_sensor_power_unit_device_present_flags[ipmi_interpret_sensor_power_unit_device_present_config_len];
   int ipmi_interpret_sensor_power_unit_redundancy_flags[ipmi_interpret_sensor_power_unit_redundancy_config_len];
   int ipmi_interpret_sensor_cooling_device_redundancy_flags[ipmi_interpret_sensor_cooling_device_redundancy_config_len];
@@ -2687,6 +2730,18 @@ interpret_sensor_config_parse (ipmi_interpret_ctx_t ctx,
                                ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_config,
                                ipmi_interpret_sensor_power_unit_flags,
                                ipmi_interpret_sensor_power_unit_config_len);
+
+  _fill_sensor_config_options (config_file_options,
+                               &config_file_options_len,
+                               ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_state_config,
+                               ipmi_interpret_sensor_power_unit_state_flags,
+                               ipmi_interpret_sensor_power_unit_state_config_len);
+
+  _fill_sensor_config_options (config_file_options,
+                               &config_file_options_len,
+                               ctx->interpret_sensor.ipmi_interpret_sensor_power_unit_transition_severity_config,
+                               ipmi_interpret_sensor_power_unit_transition_severity_flags,
+                               ipmi_interpret_sensor_power_unit_transition_severity_config_len);
 
   _fill_sensor_config_options (config_file_options,
                                &config_file_options_len,
