@@ -151,6 +151,8 @@ struct ipmi_interpret_sel {
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_power_supply_transition_severity_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_power_supply_redundancy_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_power_unit_config;
+  struct ipmi_interpret_sel_config **ipmi_interpret_sel_power_unit_state_config;
+  struct ipmi_interpret_sel_config **ipmi_interpret_sel_power_unit_transition_severity_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_power_unit_device_present_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_power_unit_redundancy_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_cooling_device_redundancy_config;
@@ -247,6 +249,8 @@ struct ipmi_interpret_sensor {
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_power_supply_transition_severity_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_power_supply_redundancy_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_power_unit_config;
+  struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_power_unit_state_config;
+  struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_power_unit_transition_severity_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_power_unit_device_present_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_power_unit_redundancy_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_cooling_device_redundancy_config;
