@@ -1,3 +1,9 @@
+2019-02-08 Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/interpret: Support interpretation of power unit +
+	transition severity sensors / events, power unit + state sensors /
+	events.
+
 2019-02-07 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/interpret: Support interpretation of drive slot +
